# document-sdk-samples

./: CHANGELOG.md  README.md
cpp/: CMakeLists.txt  README.md  id3DocumentSampleCLI.cpp
dotnet/: README.md  id3.Document.Samples.sln
dotnet/id3.Document.Samples.CLI/: Program.cs  id3.Document.Samples.CLI.csproj
dotnet/id3.Document.Samples.DetectionWF/: Form1.Designer.cs  Form1.cs  Program.cs  id3.Document.Samples.DetectionWF.csproj
dotnet/id3.Document.Samples.MRZReaderWF/: Form1.Designer.cs  Form1.cs  Program.cs  id3.Document.Samples.MRZReaderWF.csproj
java/: DocumentCLI.java  README.md  build.bat  build.sh
